@@ -13,10 +13,6 @@ COM_PODCASTMANAGER_BATCH_FEED_LABEL="Select Feed for Move/Copy"
 COM_PODCASTMANAGER_BATCH_OPTIONS="Batch process the selected feeds"
 COM_PODCASTMANAGER_BATCH_TIP="If choosing to copy a podcast, any other actions selected will be applied to the copied podcast. Otherwise, all actions are applied to the selected podcast."
 COM_PODCASTMANAGER_CONFIGURATION="Podcast Manager Configuration"
-COM_PODCASTMANAGER_CONFIG_FIELD_CACHE_DESCRIPTION="Cache the feed files."
-COM_PODCASTMANAGER_CONFIG_FIELD_CACHE_LABEL="Cache"
-COM_PODCASTMANAGER_CONFIG_FIELD_CACHE_TIME_DESCRIPTION="Time in seconds to retain files in the cache."
-COM_PODCASTMANAGER_CONFIG_FIELD_CACHE_TIME_LABEL="Cache time"
 COM_PODCASTMANAGER_CONFIG_FIELD_CUSTOMCODE_DESCRIPTION="Custom code to use for links to podcast episodes within articles and the front end feed view."
 COM_PODCASTMANAGER_CONFIG_FIELD_CUSTOMCODE_LABEL="Custom Link Code"
 COM_PODCASTMANAGER_CONFIG_FIELD_ITBLOCK_DESCRIPTION="Block the entire feed from iTunes."
