@@ -1,3 +1,6 @@
+15-November-2011 Michael Babker
+- Remove cache option for RSS feed
+
 14-November-2011 Michael Babker
 ! Security fixes for media component from J! 1.7.3
 # [#26] Fix front-end filter
